# emoji-toolbelt

./: .gitignore  README.md  build-typescript-library.ts  bun.lockb  emojiMap.json  emojiMap.ts  package-lock.json  package.json  parse.py  pyproject.toml  schema.json  typescript-library-types.ts
parse/: emojiMapPretty.json  parse.py  schema.json
src/: build-typescript-library.ts  emojiMap.ts  types.ts  write.js
